--- a/index.html
+++ b/index.html
@@ -43,24 +43,37 @@
 //           c.appendChild(p);
 //         })(window, document, "", "botupchat.js");
 //       }, 2000);
+	    
+	    
+	    <!-- ClickDesk Live Chat Service for websites -->
+<script type='text/javascript'>
+var _glc =_glc || []; _glc.push('ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDI6Nj4xQoM');
+var glcpath = (('https:' == document.location.protocol) ? 'https://my.clickdesk.com/clickdesk-ui/browser/' : 
+'http://my.clickdesk.com/clickdesk-ui/browser/');
+var glcp = (('https:' == document.location.protocol) ? 'https://' : 'http://');
+var glcspt = document.createElement('script'); glcspt.type = 'text/javascript'; 
+glcspt.async = true; glcspt.src = glcpath + 'livechat-cloud-new.js';
+var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(glcspt, s);
+</script>
+<!-- End of ClickDesk -->
 
 
 
-(function(u, t, r, a, c, k) {
-	k = t.getElementsByTagName('head')[0];
-	c = t.createElement('script');
-	c.async = 1;
-	c.src = r + a;
-	c.onload = () => {
-		u._ut.init('8885497053573477','dev','84');
-u._ut.setEmail('Please enter email');
-                u._ut.setUserAttributes({
-                    'testing': 'success'
-                });
-            };
-            k.appendChild(c);
-        })(window, document, 'https://infinity-public-js.500apps.com/usertracker/
-', 'usertracker.min.js');
+// (function(u, t, r, a, c, k) {
+// 	k = t.getElementsByTagName('head')[0];
+// 	c = t.createElement('script');
+// 	c.async = 1;
+// 	c.src = r + a;
+// 	c.onload = () => {
+// 		u._ut.init('8885497053573477','dev','84');
+// u._ut.setEmail('Please enter email');
+//                 u._ut.setUserAttributes({
+//                     'testing': 'success'
+//                 });
+//             };
+//             k.appendChild(c);
+//         })(window, document, 'https://infinity-public-js.500apps.com/usertracker/
+// // ', 'usertracker.min.js');
       // (window, document, "https://widgets.500apps.com/dev/botup", "/botupchat.js");
     </script>
   </head>
