--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOTUP</title>
     <!-- <div id="app"></div> -->
-    <script type="text/javascript">
-      var _glc = _glc || [];
-      _glc.push("ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDI6Nj4xQoM");
-      var glcpath =
-        "https:" == document.location.protocol
-          ? "https://my.clickdesk.com/clickdesk-ui/browser/"
-          : "http://my.clickdesk.com/clickdesk-ui/browser/";
-      var glcp =
-        "https:" == document.location.protocol ? "https://" : "http://";
-      var glcspt = document.createElement("script");
-      glcspt.type = "text/javascript";
-      glcspt.async = true;
-      glcspt.src = glcpath + "livechat-cloud-new.js";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(glcspt, s);
+    <script>
+      // var _glc = _glc || [];
+      // _glc.push("ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDI6Nj4xQoM");
+      // var glcpath =
+      //   "https:" == document.location.protocol
+      //     ? "https://my.clickdesk.com/clickdesk-ui/browser/"
+      //     : "http://my.clickdesk.com/clickdesk-ui/browser/";
+      // var glcp =
+      //   "https:" == document.location.protocol ? "https://" : "http://";
+      // var glcspt = document.createElement("script");
+      // glcspt.type = "text/javascript";
+      // glcspt.async = true;
+      // glcspt.src = glcpath + "livechat-cloud-new.js";
+      // var s = document.getElementsByTagName("script")[0];
+      // s.parentNode.insertBefore(glcspt, s);
 
       // setTimeout(function () {
       //   (function (n, j, c, h, a, t) {
@@ -39,24 +39,23 @@
       //   })(window, document, "", "ninjachat.js");
       // }, 2000);
 
-      //       setTimeout(function () {
-      //         (function (b, o, t, u, p, c) {
-      //           d = o.createElement("div");
-      //           d.id = "app";
-      //           c = o.getElementsByTagName("head")[0];
-      //           p = o.createElement("script");
-      //           p.async = 1;
-      //           p.id = "botup";
-      //           p.src = t + u;
-      //           p.onload = function () {
-      // //             b._Botup.init("3230758851452091", "139", "ap1");
-      //   		b._Botup.init('228836121416549', '371', 'dev')
-
-      //           };
-      //           o.lastChild.append(d);
-      //           c.appendChild(p);
-      //         })(window, document, "", "botupchat.js");
-      //       }, 2000);
+      setTimeout(function () {
+        (function (b, o, t, u, p, c) {
+          d = o.createElement("div");
+          d.id = "app";
+          c = o.getElementsByTagName("head")[0];
+          p = o.createElement("script");
+          p.async = 1;
+          p.id = "botup";
+          p.src = t + u;
+          p.onload = function () {
+            //             b._Botup.init("3230758851452091", "139", "ap1");
+            b._Botup.init("9814616161597244", "1186", "ap1");
+          };
+          o.lastChild.append(d);
+          c.appendChild(p);
+        })(window, document, "", "botupchat.js");
+      }, 2000);
 
       // (function(u, t, r, a, c, k) {
       // 	k = t.getElementsByTagName('head')[0];
