--- a/index.html
+++ b/index.html
@@ -5,78 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOTUP</title>
-    <!-- <div id="app"></div> -->
+    <!-- Google Tag Manager -->
     <script>
-      // var _glc = _glc || [];
-      // _glc.push("ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDI6Nj4xQoM");
-      // var glcpath =
-      //   "https:" == document.location.protocol
-      //     ? "https://my.clickdesk.com/clickdesk-ui/browser/"
-      //     : "http://my.clickdesk.com/clickdesk-ui/browser/";
-      // var glcp =
-      //   "https:" == document.location.protocol ? "https://" : "http://";
-      // var glcspt = document.createElement("script");
-      // glcspt.type = "text/javascript";
-      // glcspt.async = true;
-      // glcspt.src = glcpath + "livechat-cloud-new.js";
-      // var s = document.getElementsByTagName("script")[0];
-      // s.parentNode.insertBefore(glcspt, s);
-
-      // setTimeout(function () {
-      //   (function (n, j, c, h, a, t) {
-      //     d = j.createElement("div");
-      //     d.id = "app";
-      //     t = j.getElementsByTagName("head")[0];
-      //     a = j.createElement("script");
-      //     a.async = 1;
-      //     a.id = "ninjachat";
-      //     a.src = c + h;
-      //     a.onload = function () {
-      //       n._NC.init('2474062120142539','297','dev')
-      //     };
-      //     j.lastChild.append(d);
-      //     t.appendChild(a);
-      //   })(window, document, "", "ninjachat.js");
-      // }, 2000);
-
-      setTimeout(function () {
-        (function (b, o, t, u, p, c) {
-          d = o.createElement("div");
-          d.id = "app";
-          c = o.getElementsByTagName("head")[0];
-          p = o.createElement("script");
-          p.async = 1;
-          p.id = "botup";
-          p.src = t + u;
-          p.onload = function () {
-            //             b._Botup.init("3230758851452091", "139", "ap1");
-            b._Botup.init("9814616161597244", "1186", "ap1");
-          };
-          o.lastChild.append(d);
-          c.appendChild(p);
-        })(window, document, "", "botupchat.js");
-      }, 2000);
-
-      // (function(u, t, r, a, c, k) {
-      // 	k = t.getElementsByTagName('head')[0];
-      // 	c = t.createElement('script');
-      // 	c.async = 1;
-      // 	c.src = r + a;
-      // 	c.onload = () => {
-      // 		u._ut.init('8885497053573477','dev','84');
-      // u._ut.setEmail('Please enter email');
-      //                 u._ut.setUserAttributes({
-      //                     'testing': 'success'
-      //                 });
-      //             };
-      //             k.appendChild(c);
-      //         })(window, document, 'https://infinity-public-js.500apps.com/usertracker/
-      // // ', 'usertracker.min.js');
-      // (window, document, "https://widgets.500apps.com/dev/botup", "/botupchat.js");
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-MSD6K4P");
     </script>
+    <!-- End Google Tag Manager -->
+    <!-- <div id="app"></div> -->
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-MSD6K4P"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="clock">
       <div class="outer-clock-face">
         <div class="marking marking-one"></div>
