--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       setDate();
     </script>
-    <style>
+    <!-- <style>
       html {
         background: #d8dcd6;
         text-align: center;
@@ -234,6 +234,6 @@
         height: 2px;
         z-index: 1;
       }
-    </style>
+    </style> -->
   </body>
 </html>
