--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     }, 2000);
   </script> -->
 
-    <script>
+    <!-- <script>
       setTimeout(function () {
         (function (b, o, t, u, p, c) {
           d = o.createElement("div");
@@ -99,7 +99,28 @@
           "botupchat.js"
         );
       }, 2000);
+    </script> -->
+
+    <!-- ClickDesk Live Chat Service for websites -->
+    <!-- ClickDesk Live Chat Service for websites -->
+    <script type="text/javascript">
+      var _glc = _glc || [];
+      _glc.push("ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDIzIr2pAsM");
+      var glcpath =
+        "https:" == document.location.protocol
+          ? "https://my.clickdesk.com/clickdesk-ui/browser/"
+          : "http://my.clickdesk.com/clickdesk-ui/browser/";
+      var glcp =
+        "https:" == document.location.protocol ? "https://" : "http://";
+      var glcspt = document.createElement("script");
+      glcspt.type = "text/javascript";
+      glcspt.async = true;
+      glcspt.src = glcpath + "livechat-cloud-new.js";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(glcspt, s);
     </script>
+    <!-- End of ClickDesk -->
+    <!-- End of ClickDesk -->
 
     <div class="clock">
       <div class="outer-clock-face">
